# titio-core-server

./: .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 078bf30c0831_poster_image.py  2023-10-31_accessible_seat.py  2023-10-31_distance_from_stage.py  2023-10-31_pre_bookings.py  2616a5db718a_add_default_user_model.py  41e8ec69320f_user_id_migration.py  4427fc458733_hot.py  52e8f9099ebe_casting_performance_id.py  6d3f958ea2a2_init.py  76fc2c4b1586_init.py  78278aa4133e_schedule_casting.py  7cf4cfb98216_seat_cursor.py  808c48916d0b_seat_grade.py  833c3884c9d1_performer_description_nullable.py  91a2020d549e_role_performance_relation.py  96c4d9e42e6e_content_info.py  acfac32d3e3f_performance_content.py  b671ee08b4ec_area_cursor.py  c1383873b06c_seat_name.py  cd69b4db8426_db_schema_init.py  d02f7be034ff_genre.py  e3bfcff60fe3_like.py  ee2b14285f1d_kakao_login.py  f1ddd4e65fc6_add_foreign_keys.py  f2b0d6174bf4_avatar_image.py
docker/: Dockerfile  Dockerfile.local
scripts/: build.sh
src/: config.py  main.py
src/api/: area.py  booking.py  casting.py  genre.py  like.py  oauth.py  performance.py  performance_content.py  performer.py  pre_booking.py  request.py  role.py  routes.py  schedule.py  seat.py  seat_grade.py  user.py
src/auth/: authenticate.py  hash_password.py  jwt_handler.py  permission.py
src/core/: config.py
src/database/: connection.py
src/enums/: booking.py  like.py  pre_booking.py
src/exceptions/: exception.py
src/models/: area.py  association_tables.py  base.py  model.py  pre_booking.py  seat.py  user.py
src/repositories/: area.py  casting.py  genre.py  image.py  like.py  performance.py  performance_content.py  performer.py  pre_booking.py  role.py  schedule.py  seat.py  seat_grade.py  user.py
src/schema/: like.py  performance.py  user.py
src/service/: area.py  casting.py  genre.py  http.py  kakao_login.py  like.py  performance.py  (+8 more)
tests/: conftest.py  test_main.py  test_utils.py
(+27 files in other folders)
