[tool.poetry]
name = "tix2go"
version = "0.1.0"
description = ""
authors = ["Luceta <57941164+Luceta@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"


[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"
black = "^23.9.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
