[tool.poetry]
name = "tito-api"
version = "0.1.0"
description = ""
authors = ["Luceta <57941164+Luceta@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = {extras = ["async"], version = "^2.0.21"}
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
cryptography = "^41.0.3"
alembic = "^1.12.0"
ruff = "^0.0.290"
mypy = "^1.5.1"
types-passlib = "^1.7.7.13"
types-python-jose = "^3.3.4.8"
aiohttp = "^3.8.5"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"
black = "^23.9.0"
pytest = "^7.4.2"
pymysql = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
